metadata/force-app/main/default/objects/Object_2__c/Object_2__c.object-meta.xml
<CustomObject>
    <label>Object 2</label>
    <nameField>
        <label>Object 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>