metadata/force-app/main/default/objects/Object_2__c/fields/Check1__c.field-meta.xml
<CustomField>
    <fullName>Check1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check1</label>
    <type>Checkbox</type>
</CustomField>