metadata/force-app/main/default/objects/Object_2__c/fields/roll1__c.field-meta.xml
<CustomField>
    <fullName>roll1__c</fullName>
    <label>roll1</label>
    <summaryForeignKey>newTestObj__c.Object_2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>